@@ -443,8 +443,16 @@ async function cdnbox_status(req,res) {
       '"bwrecv": ' + cdnboxStates.local.bwrecv + ',' +
       '"inbound": ' + deltanetrecvcount + ',' +
       '"outbound": ' + deltanetcount + ',' +
-      '"status": "' + cdnboxStates.local.status + '"' +
-    '');
+      '"status": "' + cdnboxStates.local.status + '"' 
+    );
+    res.write( ', "mem": ' + JSON.stringify(process.memoryUsage()));
+    if (cdnboxStates.eventloop.last.count > 0) {
+      res.write( ', "evl": {' +
+        '"count": ' + cdnboxStates.eventloop.last.count + ',' +
+        '"moy": ' + Math.round(cdnboxStates.eventloop.last.cumul / cdnboxStates.eventloop.last.count) + ',' +
+        '"max": ' + cdnboxStates.eventloop.last.max +
+      '}');
+    }
     if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "status") {
       cdnboxStates.getvarnishmetrics().then(function (buff) {
         res.write(buff + '}');
