@@ -29,6 +29,8 @@ const os = require('os');
 
 const nodemailer = require('nodemailer');
 
+const cdnboxMetrics = require('./cdnboxMetrics.js');
+
 var cdnboxStates = module.exports = { };
 
 cdnboxStates.starttime = Date.now();
@@ -233,6 +235,9 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
     }
   });
   timers.setInterval(testCDNBoxes, 10000);
+
+  cdnboxStates.eventloop = {};
+  setTimeout(cdnboxMetrics.eventloop, 0, cdnboxStates.eventloop);
 }
 
 
@@ -615,10 +620,11 @@ function updatetlsticketkeys() {
 
 function decodeparsewritetlsticketkeys(d) {
 
-  // Use the async `crypto.scrypt()` instead.
-  const key = crypto.scryptSync(cdnboxStates.config.clustersecret, 'zarbi', 16);
+  if (cdnboxStates.tlskey === undefined) {
+    cdnboxStates.tlskey = crypto.scryptSync(cdnboxStates.config.clustersecret, 'zarbi', 16);
+  }
   var buff = JSON.parse(d);
-  const decipher = crypto.createDecipheriv('aes-128-cbc', key, Buffer.from(buff.iv.data));
+  const decipher = crypto.createDecipheriv('aes-128-cbc', cdnboxStates.tlskey, Buffer.from(buff.iv.data));
   let decrypted = decipher.update(buff.encrypted, 'hex', 'utf8');
   decrypted += decipher.final('utf8');
   cdnboxStates.tlsticketkeys = JSON.parse(decrypted);
@@ -700,7 +706,8 @@ cdnboxStates.getvarnishmetrics = function() {
             if (vstat[vconf[vconf_keys[i]]]) {
               switch (vstat[vconf[vconf_keys[i]]].flag) {
                 case 'c':
-                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined) {
+                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined &&
+		      cdnboxStates.varnishmetrics[vconf_keys[i]] <= vstat[vconf[vconf_keys[i]]].value) {
                     buff += ',"' + vconf_keys[i] + '": ' +
                         Math.round((vstat[vconf[vconf_keys[i]]].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
                   }
